# MSc-EnergyTrails

./: .gitignore  README.md  pyproject.toml
EnergyTrails/: ColoredTrails.py  ToM_CT.py  multiple_negotiations.py  test.py
tests/final/: log-00.csv  log-00_2_nops.csv  log-00_2_yesps.csv  log-00_nops.csv  log-01.csv  log-01_2_nops.csv  log-01_2_yesps.csv  log-01_nops.csv  log-02.csv  log-02_2_nops.csv  log-02_2_yesps.csv  log-02_nops.csv  log-11.csv  log-11_2_nops.csv  log-11_2_yesps.csv  log-11_nops.csv  log-11_nops_local.csv  log-12.csv  log-12_2_nops.csv  log-12_2_yesps.csv  log-12_2_yesps_local.csv  log-12_nops.csv  log-22.csv  log-22_2_nops.csv  log-22_2_yesps.csv  log-22_nops.csv  outfile-00  outfile-00-temp  outfile-00_2_nops  outfile-00_2_nops-temp  outfile-00_2_yesps  outfile-00_2_yesps-temp  outfile-00_nops  outfile-00_nops-temp  outfile-01-temp  outfile-01_2_nops  outfile-01_2_nops-temp  outfile-01_2_yesps  outfile-01_2_yesps-temp  outfile-01_nops-temp  (+16 more)
utils/: graphmaker.py  statistical_tests.py
