[tool.poetry]
name = "energytrails"
version = "0.1.0"
description = ""
authors = ["Isabelle Tilleman <isabelle.tilleman@tno.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
py2puml = "^0.7.2"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
tqdm = "^4.66.1"
scipy = "^1.11.3"
statsmodels = "^0.14.0"
scikit-posthocs = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.5"
mypy = "^1.2.0"
pylint = "^2.17.3"
graphviz = "^0.20.1"
plantuml = "^0.3.0"
py2puml = "^0.7.2"
tqdm = "^4.65.0"
pygame = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
